--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -1,1 +1,26 @@
 /* Your CSS code here */
+
+.background {
+    width: 100vw;
+    height: 50vh;
+}
+
+.background::before {
+    content: '';
+    background: url('../images/flowershop.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    opacity: 0.9;
+    top: 0px;
+    left: 0px;
+    width: 100vw;
+    height: 70vh;
+    z-index: -1;
+    filter: brightness(60%);
+
+}
+
+.light-background {
+    background-color: palegreen;
+}
